Project ecommerce {
  database_type: 'PostgreSQL'
  Note: '''
    なんちゃってECサイト Phase1 DB design.
    CHECK constraints are documented as notes because DBML support depends on export targets.
  '''
}

Enum product_status {
  active
  stopped
}

Enum order_status {
  ordered
  canceled
}

Enum review_status {
  draft
  published
  hidden
}

Table users {
  id bigint [pk, increment]
  name varchar [not null, note: 'Application validation: trim, non-empty, max length']
  email varchar [not null, unique, note: 'Store normalized email. Case-insensitive uniqueness is handled by application normalization or a functional unique index if needed.']
  password_hash varchar [not null]
  deleted_at timestamp
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table roles {
  id bigint [pk, increment]
  name varchar [not null, unique, note: 'Seed values: customer, admin']
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table user_roles {
  user_id bigint [not null]
  role_id bigint [not null]

  indexes {
    (user_id, role_id) [unique]
  }
}

Table refresh_tokens {
  id bigint [pk, increment]
  user_id bigint [not null]
  token_hash varchar [not null, unique]
  expires_at timestamp [not null]
  revoked_at timestamp
  created_at timestamp [not null]
  updated_at timestamp [not null]

  indexes {
    user_id
  }
}

Table categories {
  id bigint [pk, increment]
  name varchar [not null, note: 'No unique constraint. Future category hierarchy may allow same names in different branches.']
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table tax_rates {
  id bigint [pk, increment]
  name varchar [not null, note: 'No unique constraint in Phase1. Future effective_from/effective_to may be added.']
  rate decimal [not null, note: 'CHECK candidate: rate >= 0']
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table products {
  id bigint [pk, increment]
  name varchar [not null, note: 'No unique constraint. Application validation: trim, non-empty, max length']
  description text [note: 'Plain text only. HTML/Markdown are rejected by application validation.']
  price_excluding_tax integer [not null, note: 'CHECK candidate: price_excluding_tax >= 0']
  tax_rate_id bigint [not null]
  category_id bigint [not null]
  maker_name varchar [note: 'No unique constraint. Application validation: trim, max length']
  model_number varchar [note: 'No unique constraint. Application validation: trim, max length']
  stock_quantity integer [not null, note: 'CHECK candidate: stock_quantity >= 0']
  low_stock_threshold integer [not null, note: 'CHECK candidate: low_stock_threshold >= 0']
  status product_status [not null]
  image_url varchar
  released_at date
  created_at timestamp [not null]
  updated_at timestamp [not null]

  indexes {
    category_id
    tax_rate_id
    status
    released_at
    (status, category_id, price_excluding_tax)
  }
}

Table carts {
  id bigint [pk, increment]
  user_id bigint [not null, unique, note: 'One cart per user']
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table cart_items {
  id bigint [pk, increment]
  cart_id bigint [not null]
  product_id bigint [not null]
  quantity integer [not null, note: 'CHECK candidate: quantity >= 1. Stock availability is application validation.']
  created_at timestamp [not null]
  updated_at timestamp [not null]

  indexes {
    (cart_id, product_id) [unique]
  }
}

Table orders {
  id bigint [pk, increment]
  order_number varchar [not null, unique, note: 'Display/order inquiry identifier']
  user_id bigint [not null]
  order_status order_status [not null]
  total_excluding_tax integer [not null, note: 'CHECK candidate: total_excluding_tax >= 0']
  total_tax integer [not null, note: 'CHECK candidate: total_tax >= 0']
  total_including_tax integer [not null, note: 'CHECK candidate: total_including_tax >= 0']
  ordered_at timestamp [not null]
  canceled_at timestamp [note: 'Consistency with order_status is guaranteed by application domain logic.']
  created_at timestamp [not null]
  updated_at timestamp [not null]

  indexes {
    user_id
    order_status
    ordered_at
  }
}

Table order_items {
  id bigint [pk, increment]
  order_id bigint [not null]
  product_id bigint [not null]
  product_name varchar [not null, note: 'Snapshot at order time']
  product_image_url varchar
  maker_name varchar
  model_number varchar
  unit_price_excluding_tax integer [not null, note: 'CHECK candidate: unit_price_excluding_tax >= 0']
  tax_rate decimal [not null, note: 'Snapshot at order time. CHECK candidate: tax_rate >= 0']
  unit_price_including_tax integer [not null, note: 'CHECK candidate: unit_price_including_tax >= 0']
  quantity integer [not null, note: 'CHECK candidate: quantity >= 1']
  subtotal_excluding_tax integer [not null, note: 'CHECK candidate: subtotal_excluding_tax >= 0']
  subtotal_tax integer [not null, note: 'CHECK candidate: subtotal_tax >= 0']
  subtotal_including_tax integer [not null, note: 'CHECK candidate: subtotal_including_tax >= 0']
  created_at timestamp [not null]

  indexes {
    order_id
    product_id
  }
}

Table reviews {
  id bigint [pk, increment]
  user_id bigint [not null]
  product_id bigint [not null]
  rating integer [not null, note: 'CHECK candidate: rating BETWEEN 1 AND 5']
  title varchar [note: 'Application validation: trim, max length']
  comment text [note: 'Plain text only. CHECK candidate: comment IS NULL OR title IS NOT NULL']
  status review_status [not null]
  created_at timestamp [not null]
  updated_at timestamp [not null]

  indexes {
    (user_id, product_id) [unique]
    product_id
    (product_id, status, created_at)
  }
}

Ref: user_roles.user_id > users.id
Ref: user_roles.role_id > roles.id

Ref: refresh_tokens.user_id > users.id

Ref: products.category_id > categories.id
Ref: products.tax_rate_id > tax_rates.id

Ref: carts.user_id > users.id
Ref: cart_items.cart_id > carts.id
Ref: cart_items.product_id > products.id

Ref: orders.user_id > users.id
Ref: order_items.order_id > orders.id
Ref: order_items.product_id > products.id

Ref: reviews.user_id > users.id
Ref: reviews.product_id > products.id
